* Added a status icon command that launches the program * Fixed run error pi_tab* wrong permitions * Changed backup script to use cp not shutil

--- a/pi_tab-source/DEBIAN/control
+++ b/pi_tab-source/DEBIAN/control
@@ -1,8 +1,8 @@
 Package: PiTab
 Version: 0.0.9
 Architecture: armhf
-Maintainer: Tom Bryan <theedbryanfamily@gmail.com>
-Depends: python, python-gtk2, python3
+Maintainer: Tom Bryan <tgbryan39@outlook.com>
+Depends: python, python-gtk2, python3, mplayer2
 Installed-Size: 7700
 Homepage: http://example.com
 Description: Pi Tab GUI
